<resources>
    <string name="app_name">AndWallet</string>
    <string name="item">Item</string>
    <string name="amount">Amount</string>
    <string name="income">Income</string>
    <string name="expense">Expenses</string>
    <string name="save">Save</string>
    <string name="some_text">Whatever</string>
    <string name="show_summary">Show Summary</string>
    <string name="clear">Clear</string>
    <string name="initial_bal">$0</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="balance">Total Balance</string>
    <string name="summary">Summary</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="pin_code">Pin Code</string>
    <string name="login">Login</string>
    <string name="empty_val">Cannot Be Empty</string>
    <string name="invalid_pin">Must be a valid pin!</string>
    <string name="incorrect_pin">Incorrect pin!</string>
    <string name="currency">$</string>
</resources>
